lapcorp Project updated